--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 01:49:00 PM</p>
+    <p class="lastupdate">09/15/2020 01:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">90.6&#176;F</td>
+        <td class="data">90.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">90.6&#176;F</td>
+        <td class="data">90.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">90.6&#176;F</td>
+        <td class="data">90.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">41.3&#176;F</td>
+        <td class="data">41.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.994 inHg (-0.048)</td>
+        <td class="data">29.992 inHg (-0.048)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph SSW (202&#176;)</td>
+        <td class="data">9 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:03:01 AM">
             30.054</span><br/>
-          <span title="01:34:01 PM">
-            29.994</span>
+          <span title="01:51:01 PM">
+            29.991</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -423,7 +423,7 @@
         <td class="data new_row hilo_day">
           2</td>
         <td class="data new_row hilo_week">
-          3</td>
+          4</td>
         <td class="data new_row hilo_month">
           3</td>
         <td class="data new_row hilo_year">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          187
+          189
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 23 hours, 2 minutes</td>
+      <td class="data">13 days, 23 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 23 hours, 2 minutes</td>
+      <td class="data">13 days, 23 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
