--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 01:54:00 PM</p>
+    <p class="lastupdate">09/15/2020 01:59:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -211,8 +211,8 @@
           <td class="units"> inHg</td>
           <td class="data new_row">30.054<br/>
             <span class="timestamp">10:03:01 AM</span><br/>
-            29.991<br/>
-            <span class="timestamp">01:51:01 PM</span>
+            29.990<br/>
+            <span class="timestamp">01:54:01 PM</span>
           </td>
           <td class="data new_row">30.054<br/>
             <span class="timestamp">10:03:01 AM (Tuesday)</span><br/>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            189
+            194
           </td>
           <td class="data new_row">
             1<br/>
@@ -361,8 +361,8 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            76.8<br/>
-            <span class="timestamp">12:00:01 AM</span><br/>
+            76.9<br/>
+            <span class="timestamp">01:54:01 PM</span><br/>
             73.3<br/>
             <span class="timestamp">07:48:01 AM</span>
           </td>
@@ -398,8 +398,8 @@
           <td class="data new_row">
             38<br/>
             <span class="timestamp">11:46:01 AM</span><br/>
-            36<br/>
-            <span class="timestamp">12:00:01 AM</span>
+            35<br/>
+            <span class="timestamp">01:58:01 PM</span>
           </td>
           <td class="data new_row">
             41<br/>
