--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 02:19:00 PM</p>
+    <p class="lastupdate">09/15/2020 02:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">89.9&#176;F</td>
+        <td class="data">89.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">89.9&#176;F</td>
+        <td class="data">89.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">89.9&#176;F</td>
+        <td class="data">89.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">39.2&#176;F</td>
+        <td class="data">39.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.987 inHg (-0.049)</td>
+        <td class="data">29.984 inHg (-0.052)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph SSW (202&#176;)</td>
+        <td class="data">8 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.2&#176;F</td>
+        <td class="data">77.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,7 +237,7 @@
         <td class="data new_row hilo_day">
           <span title="12:39:49 PM">
             50.5</span><br/>
-          <span title="02:17:53 PM">
+          <span title="02:23:00 PM">
             39.1</span>
         </td>
         <td class="data new_row hilo_week">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:03:01 AM">
             30.054</span><br/>
-          <span title="02:17:01 PM">
-            29.986</span>
+          <span title="02:23:01 PM">
+            29.984</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:13:01 PM">
-            77.2</span><br/>
+          <span title="02:20:01 PM">
+            77.3</span><br/>
           <span title="07:48:01 AM">
             73.3</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 23 hours, 32 minutes</td>
+      <td class="data">13 days, 23 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 23 hours, 32 minutes</td>
+      <td class="data">13 days, 23 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
