--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 02:24:00 PM</p>
+    <p class="lastupdate">09/15/2020 02:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">89.7&#176;F</td>
+        <td class="data">89.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">89.7&#176;F</td>
+        <td class="data">89.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">89.7&#176;F</td>
+        <td class="data">89.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.984 inHg (-0.052)</td>
+        <td class="data">29.984 inHg (-0.049)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph S (180&#176;)</td>
+        <td class="data">8 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:39:49 PM">
             50.5</span><br/>
-          <span title="02:23:00 PM">
-            39.1</span>
+          <span title="02:24:03 PM">
+            39.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:03:01 AM">
             30.054</span><br/>
-          <span title="02:23:01 PM">
-            29.984</span>
+          <span title="02:24:01 PM">
+            29.983</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          2</td>
+          3</td>
         <td class="data new_row hilo_week">
           4</td>
         <td class="data new_row hilo_month">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 23 hours, 37 minutes</td>
+      <td class="data">13 days, 23 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 23 hours, 37 minutes</td>
+      <td class="data">13 days, 23 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
