--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 02:44:00 PM</p>
+    <p class="lastupdate">09/15/2020 02:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">89.2&#176;F</td>
+        <td class="data">89.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">89.2&#176;F</td>
+        <td class="data">89.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">89.2&#176;F</td>
+        <td class="data">89.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">40.1&#176;F</td>
+        <td class="data">41.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">18%</td>
+        <td class="data">19%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.976 inHg (-0.055)</td>
+        <td class="data">29.973 inHg (-0.056)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph S (180&#176;)</td>
+        <td class="data">9 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.6&#176;F</td>
+        <td class="data">77.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">33%</td>
       </tr>
     </tbody>
   </table>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:03:01 AM">
             30.054</span><br/>
-          <span title="02:39:02 PM">
-            29.975</span>
+          <span title="02:45:02 PM">
+            29.973</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:43:02 PM">
-            77.6</span><br/>
+          <span title="02:46:02 PM">
+            77.7</span><br/>
           <span title="07:48:01 AM">
             73.3</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="11:46:01 AM">
             38</span><br/>
-          <span title="02:17:01 PM">
-            34</span>
+          <span title="02:45:02 PM">
+            33</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:53:01 AM (Monday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 23 hours, 57 minutes</td>
+      <td class="data">14 days, 0 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 23 hours, 57 minutes</td>
+      <td class="data">14 days, 0 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
